--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@rollup/plugin-eslint": "^9.0.4",
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.1.0",
+    "@rollup/plugin-terser": "^0.4.3",
     "rollup": "^3.25.1",
     "rollup-plugin-eslint": "^7.0.0"
   }
