--- a/5/.vscode/launch.json
+++ b/5/.vscode/launch.json
@@ -10,7 +10,7 @@
       "name": "Launch Program",
       "skipFiles": ["<node_internals>/**"],
       "program": "${workspaceFolder}/server/server.js",
-      "cwd": "${workspaceFolder}/dist"
+      "cwd": "${workspaceFolder}/client"
     }
   ]
 }
