--- a/package.json
+++ b/package.json
@@ -22,7 +22,13 @@
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.1.0",
     "@rollup/plugin-terser": "^0.4.3",
+    "cookie-parser": "^1.4.6",
+    "express": "^4.18.2",
+    "mongodb": "^5.6.0",
+    "morgan": "^1.10.0",
     "rollup": "^3.25.1",
-    "rollup-plugin-eslint": "^7.0.0"
+    "rollup-plugin-eslint": "^7.0.0",
+    "socket.io": "^4.6.2",
+    "socket.io-client": "^4.6.2"
   }
 }
