--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@rollup/plugin-terser": "^0.4.3",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
+    "js-cookie": "^3.0.5",
     "mongodb": "^5.6.0",
     "morgan": "^1.10.0",
     "rollup": "^3.25.1",
